--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- Font Awesome CDN -->
+    <!-- +++Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- Google Font -->
+    <!-- +++Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
-    <!-- DaisyUI + Tailwind -->
+    <!-- +++DaisyUI + Tailwind -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Tailwind config -->
+    <!-- +++Tailwind config -->
     <script>
         tailwind.config = {
           theme: {
             extend: {
               colors: {
-                primary: '#ff0000',
                 navbtn: '#E9E9E9',
                 white: '#FFFFFF',
                 logo: '#ABEF5F',
                 bg_col2: '#F4F4F4',
+                foot_nav: 'rgb(233,233,233)',
               },
               fontFamily:{},
               backgroundImage:{
@@ -57,7 +57,7 @@
             <div class="flex items-center gap-4 ">
               <a href="#" class="bg-white rounded-full text-lg w-12 h-12 grid place-items-center border-solid border-navbtn hover:bg-logo transition duration-300 ease-in-out"><i class="fa-solid fa-magnifying-glass"></i></a> 
               <a href="#" class="bg-white rounded-full text-lg w-12 h-12 grid place-items-center border-solid border-navbtn hover:bg-logo transition duration-300 ease-in-out"><i class="fa-solid fa-cart-shopping"></i></a> 
-              <a href="#" class="btn bg-logo">Book Consult <i class="fa-solid fa-arrow-right bg-black text-white w-8 h-8 -rotate-45 rounded-full grid place-items-center text-xl"></i></a>
+              <a href="#" class="btn bg-logo border-none">Book Consult <i class="fa-solid fa-arrow-right bg-black text-white w-8 h-8 -rotate-45 rounded-full grid place-items-center text-xl"></i></a>
             </div>
             <div class="dropdown">
               <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -82,14 +82,14 @@
       <div class="hero_text text-center">
         <h1 class="my-6 text-6xl font-extrabold leading-[5rem]">A barn house of this design has a<br>striking appearance</h1>
         <p class="pb-8 text-base font-medium leading-6">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal<br>accents, and large windows that flood the space with natural light.</p>
-        <a href="#" class="btn bg-logo rounded-full">View Details <i class="fa-solid fa-arrow-right bg-black text-white w-8 h-8 -rotate-45 rounded-full grid place-items-center text-xl"></i></a>
+        <a href="#" class="btn bg-logo rounded-full border-none">View Details <i class="fa-solid fa-arrow-right bg-black text-white w-8 h-8 -rotate-45 rounded-full grid place-items-center text-xl"></i></a>
       </div>
       </div>
     </section>
     <!-- =========================== We_Design Section ========================= -->
-     <section class="py-24 bg-bg_col2 relative">
-      <div class="container mx-auto flex justify-around">
-        <div class="arrow_spring absolute top-9 left-4"><img src="assets/Vector.png" alt=""></div>
+     <section class="py-24 bg-bg_col2 ">
+      <div class="container mx-auto flex justify-around relative">
+        <div class="arrow_spring absolute -top-16 -left-12"><img src="assets/Vector.png" alt=""></div>
         <div class="about_text w-6/12">
           <div class="py-2 px-4 inline-block text-base bg-white rounded-full"><i class="fa-solid fa-arrow-right"></i>About Us</div>
           <h3 class="text-4xl font-extrabold mt-4">We design thoughtful, liveable spaces</h3>
@@ -186,28 +186,28 @@
             <h3 class="text-4xl font-extrabold mt-4">Let’s Discuss Next Project</h3>
             <p class="text-base font-medium my-6">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
             <form action="" class="grid grid-cols-2 gap-6">
-              <input class="rounded-full p-5" type="text" placeholder="First Name*">
-              <input class="rounded-full p-5" type="text" placeholder="Last Name*">
-              <input class="rounded-full p-5" type="tel" name="" id="" placeholder="Phone Number*">
-              <input class="rounded-full p-5" type="email" name="" id="" placeholder="Email*">
-              <textarea name="" id="" rows="10" class="col-span-2 rounded-3xl p-5" placeholder="Write your message here"></textarea>
-              <a href="#" class="col-span-2 btn bg-logo rounded-full">Send Mail<i class="fa-solid fa-arrow-right bg-black text-white w-8 h-8 -rotate-45 rounded-full grid place-items-center text-xl"></i></a>
+              <input class="rounded-full p-5 outline-none" type="text" placeholder="First Name*">
+              <input class="rounded-full p-5 outline-none" type="text" placeholder="Last Name*">
+              <input class="rounded-full p-5 outline-none" type="tel" name="" id="" placeholder="Phone Number*">
+              <input class="rounded-full p-5 outline-none" type="email" name="" id="" placeholder="Email*">
+              <textarea name="" id="" rows="10" class="col-span-2 rounded-3xl p-5 outline-none" placeholder="Write your message here"></textarea>
+              <a href="#" class="col-span-2 btn bg-logo rounded-full border-none">Send Mail<i class="fa-solid fa-arrow-right bg-black text-white w-8 h-8 -rotate-45 rounded-full grid place-items-center text-xl"></i></a>
             </form>
           </div>
         </section>
         <!-- ===================== Footer Section ================================== -->
          <section class="py-24 bg-[rgb(28,28,28)]">
           <div class="container mx-auto flex flex-col items-center">
-            <a href="#" class="text-xl flex items-center gap-1.5"><span class="flex justify-center items-center bg-logo text-black w-8 h-8 -rotate-45 rounded-full text-xl"><i class="fa-solid fa-arrow-right"></i></span>Rinterio</a>
-            <p class="text-base font-medium mt-4">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            <a href="#" class="text-4xl flex items-center gap-1.5 text-white"><span class="flex justify-center items-center bg-logo text-black w-8 h-8 -rotate-45 rounded-full text-xl"><i class="fa-solid fa-arrow-right"></i></span>Rinterio</a>
+            <p class="text-base font-medium mt-4 text-neutral-500">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
             <ul class="flex gap-28 my-12">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Portfolio</a></li>
-              <li><a href="#">Blogs</a></li>
-              <li><a href="#">Contact Us</a></li>
+              <li><a href="#" class="text-foot_nav hover:text-logo transition-colors duration-300 ease-in-out">Home</a></li>
+              <li><a href="#" class="text-foot_nav hover:text-logo transition-colors duration-300 ease-in-out">Services</a></li>
+              <li><a href="#" class="text-foot_nav hover:text-logo transition-colors duration-300 ease-in-out">Portfolio</a></li>
+              <li><a href="#" class="text-foot_nav hover:text-logo transition-colors duration-300 ease-in-out">Blogs</a></li>
+              <li><a href="#" class="text-foot_nav hover:text-logo transition-colors duration-300 ease-in-out">Contact Us</a></li>
             </ul>
-            <a href="#" class="btn bg-logo">Book Consult <i class="fa-solid fa-arrow-right bg-black text-white w-8 h-8 -rotate-45 rounded-full grid place-items-center text-xl"></i></a>
+            <a href="#" class="btn bg-logo border-none">Book Consult <i class="fa-solid fa-arrow-right bg-black text-white w-8 h-8 -rotate-45 rounded-full grid place-items-center text-xl"></i></a>
           </div>
          </section>
 </body>
