added extra section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body style="font-family: 'Manrope', sans-serif;">
   <!-- ==============================NAV section=================================== -->
-    <section class="">
+    <section>
       <nav class="w-11/12 mx-auto mt-12 mb-10">
         <div class="navbar">
           <div class="navbar-start">
@@ -198,6 +198,15 @@
             </form>
           </div>
         </section>
+      <!-- ============================ DEAL section ========================== -->
+      <section class="py-8 lg:py-24 px-8 lg:px-0">
+        <div class="container mx-auto text-center flex items-center flex-col">
+          <h4 class="py-2 px-4 inline-block text-base bg-[rgba(171,239,95,0.2)] rounded-full"><i class="fa-solid fa-arrow-right"></i>Make the deal</h4>
+          <h3 class="text-4xl font-extrabold mt-4">Our Client in our main priority</h3>
+          <p class="text-base font-medium my-6">Just contact us and thats it, rest is our job</p>
+          <img src="assets/handshake.webp" alt="">
+        </div>
+      </section>
         <!-- ===================== Footer Section ================================== -->
          <section class="py-16 lg:py-24 bg-[rgb(28,28,28)] px-8 lg:px-0">
           <div class="container mx-auto flex flex-col items-center">
